Bug 1166382 - Use the adjusted full zoom in nsDocument::GetViewportInfo(). r=tn

--HG--
extra : source : 13d43f2b9bc95018f5ed419a2649f0e5736029c8